# baul

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: bucket.rs  connection.rs  mod.rs  object.rs
src-tauri/src/models/: bucket.rs  connection.rs  object.rs
src-tauri/src/services/: config_service.rs  credential_service.rs  mod.rs  s3_service.rs
src/app/: App.tsx
src/components/: AppIcon.tsx  theme-provider.tsx
src/components/layout/: ConnectionItem.tsx  Header.tsx  MainLayout.tsx  QuickAccessSection.tsx  Sidebar.tsx  ThemeToggle.tsx  WelcomeScreen.tsx
src/components/ui/: checkbox.tsx
src/features/buckets/components/: BucketItem.tsx  CreateBucketDialog.tsx  DeleteBucketDialog.tsx
src/features/connections/components/: ConnectionDialog.tsx  ImportExportDialog.tsx
src/features/objects/components/: BreadcrumbNav.tsx  CreateFolderDialog.tsx  DeleteDialog.tsx  DropZone.tsx  MetadataDialog.tsx  ObjectBrowser.tsx  ObjectGrid.tsx  ObjectTable.tsx  PreviewDialog.tsx  RenameDialog.tsx  ShareDialog.tsx  UploadDialog.tsx
src/features/objects/hooks/: useObjects.ts
src/hooks/: useConnectionHealth.ts  useKeyboardShortcuts.ts
src/lib/: tauri.ts  utils.ts
src/stores/: connectionStore.ts  favoritesStore.ts  historyStore.ts  transferStore.ts  uiStore.ts
src/types/: bucket.ts  connection.ts  object.ts
(+2 files in other folders)
