[package]
name = "baul"
version = "0.1.0"
description = "Baul - A modern S3 client supporting multiple providers"
authors = ["codycody31"]
edition = "2021"

[lib]
name = "baul_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
opendal = { version = "0.51", features = ["services-s3"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
futures = "0.3"
aws-config = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
